--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,8 @@
 <html lang="pt-br">
 <head>
 	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+
 	<title>Desafio</title>
 	<!-- build:css css/index.css -->
 	<link rel="stylesheet" href="css/bootstrap.css">
@@ -50,7 +52,8 @@
                         
                     </div> 
                 </div>
-                <div class="alert alertas alertCliente alert-success"> <strong>Sucesso!</strong> Mensagem enviada com Sucesso, veja no console>network>contatos.php :P </div>
+                <div class="alert alertas alertCliente alert-success"> <strong>Sucesso!</strong> Mensagem enviada com Sucesso, veja no console>network>contatos.php :P 
+                </div>
             </div>
         </form>
 	</div>
